Fixing z-index issue

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@
 	display: block;
 	
 	position: relative;
+	
+	z-index: 1;
 }
 
 .nav a {
